--- a/index.html
+++ b/index.html
@@ -41,9 +41,6 @@
             <div class="row">
                 <div class="col-lg-12">
                     <nav class="navbar navbar-expand-lg">
-                        <a class="navbar-brand" href="index.html">
-                            <img src="assets/images/white-logo.svg" alt="Logo" />
-                        </a>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                             data-bs-target="#navbarNine" aria-controls="navbarNine" aria-expanded="false"
                             aria-label="Toggle navigation">
@@ -104,12 +101,11 @@
                     <li>
                         <a class="page-scroll" href="#democracia">Democracia</a>
                     </li>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#democracia">Democracia</a>
-                    </li>
                     <li>
                         <a class="page-scroll" href="#tiposdemocracia">Tipos de Democracia</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#cidadania">Democracia, Cidadania e Direitos Humanos</a>
                     </li>
                 </ul>
             </div>
@@ -797,89 +793,71 @@
     </section>
     <!-- ===== service-area end ===== -->
 
+    <section class="about-area about-five" id="cidadania">
+        <div class="container">
+            <div class="row align-items-center">
+
+                <div class="col-lg-6 col-12">
+                    <div class="about-five-content">
+                        <h2 class="main-title fw-bold">Democracia, Cidadania e Direitos Humanos</h2>
+                        <p>A <strong>democracia</strong> é um regime político em que todos os cidadãos elegíveis
+                            participam igualmente,
+                            tanto diretamente ou através de representantes eleitos, com a intenção de ajudar no
+                            desenvolvimento e na criação de leis, exercendo o poder da governação através do sufrágio
+                            universal. Sendo a participação direta na política, a principal característica da democracia
+                            participativa.
+                        </p>
+                        <p>
+                            Já a <strong>cidadania</strong> é a expressão concreta do exercício da democracia. Ou seja,
+                            praticar a
+                            cidadania é ter direitos civis, políticos e sociais, expressando a igualdade dos indivíduos
+                            perante a lei, pertencendo a uma sociedade devidamente organizada. A cidadania instaura-se a
+                            partir dos processos de lutas que culminaram na Independência dos Estados Unidos da América
+                            do Norte e na Revolução Francesa, onde esses dois eventos romperam o princípio de
+                            legitimidade que vigia até então, baseado nos deveres dos súditos e passaram a estruturá-lo
+                            a partir dos direitos do cidadão. A partir desse acontecimentos as lutas posteriores foram
+                            travados para que se ampliasse o conceito e a prática de cidadania e o ocidente o expandir
+                            para as mulheres, crianças, minorias nacionais, étnicas, sexuais, etárias.
+                        </p>
+                    </div>
+                </div>
+
+                <div class="col-lg-6 col-12">
+                    <div class="about-five-content">
+                        <h2 class="main-title fw-bold">Eleições e representação</h2>
+                        <p>A <strong>representação por mandato</strong> ocorre se os partidos informarem os eleitores
+                            sobre suas intenções e se a realização dessas intenções é o melhor para os eleitores sobre
+                            as circunstâncias dadas, dessa forma é difundida: acadêmicos, jornalistas e cidadãos
+                            ordinários confiam nela como se fosse um axioma, onde o eleitor compara as promessas dos
+                            candidatos e votam somente para escolher o melhor candidato.
+                        </p>
+                        <p>
+                            Já a <strong>representação por prestação</strong> de contas ocorre quando os eleitores
+                            votam em representantes que apresentam ideias que favoreçam a ele ou quando mantenham a
+                            organização da nação ou do estado para serem reeleitos, ou seja, a prestação de contas só
+                            ocorre quando os representantes agem em favor do interesse dos primeiros, e escolhem
+                            políticas necessárias para ser reeleito, onde o voto é usado pelos eleitores de forma que dê
+                            sensação do representante ao poder, onde as informações sobre o governante são passadas para
+                            os eleitores através do desempenho do governante.
+
+                        </p>
+                        <p>
+                            Alguns dos grandes problemas a serem enfrentados atualmente é a polarização do governo entre
+                            direita e esquerda, que causam um círculo de ódio entre os dois lados, as fake news, que
+                            acabam gerando uma onda de informações falsas sobre acontecimentos e sobre o governo, e
+                            mesmo com a liberação das máscaras e as vacinas, a pandemia ainda não acabou o que deixa um
+                            grande medo em grande parte da população pelo surgimento de uma nova variante ainda mais
+                            letal gerando um possível aumento do número de infectados ou até um novo vírus.
 
 
-    <!-- Start Footer Area -->
-    <footer class="footer-area footer-eleven">
-        <!-- Start Footer Top -->
-        <div class="footer-top">
-            <div class="container">
-                <div class="inner-content">
-                    <div class="row">
-                        <div class="col-lg-4 col-md-6 col-12">
-                            <!-- Single Widget -->
-                            <div class="footer-widget f-about">
-                                <div class="logo">
-                                    <a href="index.html">
-                                        <img src="assets/images/logo.svg" alt="#" class="img-fluid" />
-                                    </a>
-                                </div>
-                                <p>
-                                    Making the world a better place through constructing elegant
-                                    hierarchies.
-                                </p>
-                                <p class="copyright-text">
-                                    <span>© 2024 Ayro UI.</span>Designed and Developed by
-                                    <a href="javascript:void(0)" rel="nofollow"> Ayro UI </a>
-                                </p>
-                            </div>
-                            <!-- End Single Widget -->
-                        </div>
-                        <div class="col-lg-2 col-md-6 col-12">
-                            <!-- Single Widget -->
-                            <div class="footer-widget f-link">
-                                <h5>Solutions</h5>
-                                <ul>
-                                    <li><a href="javascript:void(0)">Marketing</a></li>
-                                    <li><a href="javascript:void(0)">Analytics</a></li>
-                                    <li><a href="javascript:void(0)">Commerce</a></li>
-                                    <li><a href="javascript:void(0)">Insights</a></li>
-                                </ul>
-                            </div>
-                            <!-- End Single Widget -->
-                        </div>
-                        <div class="col-lg-2 col-md-6 col-12">
-                            <!-- Single Widget -->
-                            <div class="footer-widget f-link">
-                                <h5>Support</h5>
-                                <ul>
-                                    <li><a href="javascript:void(0)">Pricing</a></li>
-                                    <li><a href="javascript:void(0)">Documentation</a></li>
-                                    <li><a href="javascript:void(0)">Guides</a></li>
-                                    <li><a href="javascript:void(0)">API Status</a></li>
-                                </ul>
-                            </div>
-                            <!-- End Single Widget -->
-                        </div>
-                        <div class="col-lg-4 col-md-6 col-12">
-                            <!-- Single Widget -->
-                            <div class="footer-widget newsletter">
-                                <h5>Subscribe</h5>
-                                <p>Subscribe to our newsletter for the latest updates</p>
-                                <form action="#" method="get" target="_blank" class="newsletter-form">
-                                    <input name="EMAIL" placeholder="Email address" required="required" type="email" />
-                                    <div class="button">
-                                        <button class="sub-btn">
-                                            <i class="lni lni-envelope"></i>
-                                        </button>
-                                    </div>
-                                </form>
-                            </div>
-                            <!-- End Single Widget -->
-                        </div>
+                        </p>
                     </div>
                 </div>
             </div>
         </div>
-        <!--/ End Footer Top -->
-    </footer>
-    <!--/ End Footer Area -->
+        <!-- container -->
+    </section>
 
-    <div class="made-in-ayroui mt-4">
-        <a href="https://ayroui.com" target="_blank" rel="nofollow">
-            <img style="width:220px" src="assets/images/ayroui.svg">
-        </a>
-    </div>
 
     <a href="#" class="scroll-top btn-hover">
         <i class="lni lni-chevron-up"></i>
